SecurityWebServer/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-secure-server
  namespace: go-security-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-secure-server
  template:
    metadata:
      labels:
        app: go-secure-server
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: go-secure-server
          image: gok8ssecuritylab/go-secure-server:latest
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
