SecurityWebServer/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-secure-service
  namespace: go-security-lab
spec:
  selector:
    app: go-secure-server
  ports:
    - port: 8080
      targetPort: 8080
